--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ body {
   flex: 5;
   padding: 0;
   margin: 90px 200px 90px 20px;
-  max-width: 75%;
+  max-width: 60%;
 }
 
 #navbar {
@@ -108,6 +108,7 @@ a {
 #contact {
   width: 100%;
   padding: 45px;
+  margin: auto;
 }
 
 #landing {
@@ -123,8 +124,9 @@ a {
 }
 
 .singleProject {
+  float: right;
   width: 480px;
-  padding: 30px;
+  padding: 0 30px 60px 30px;
 }
 
 h1 {
