--- a/public/style.css
+++ b/public/style.css
@@ -362,7 +362,7 @@ button {
   }
 
   #nav-container-small {
-    position: absolute;
+    position: fixed;
     width: 100%;
     top: 0;
     right: 0;
