--- a/public/style.css
+++ b/public/style.css
@@ -37,10 +37,14 @@ body {
   margin: 20px;
 }
 
+#nav-group-small {
+  display: none;
+}
+
 #nav-container-small {
   text-align: center;
   position: fixed;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 20px;
@@ -154,6 +158,7 @@ a {
 }
 
 .design {
+  display: none;
   height: 480px;
   text-align: center;
 }
@@ -360,6 +365,9 @@ button {
     margin: 0;
     padding: 0;
   }
+  #nav-group-small {
+    display: block;
+  }
 
   #nav-container-small {
     position: fixed;
@@ -447,6 +455,7 @@ button {
   }
 
   .design {
+    display: none;
     width: 100%;
     height: 100%;
     margin: auto;
