--- a/public/style.css
+++ b/public/style.css
@@ -165,6 +165,7 @@ a {
 
 .loading {
   height: 480px;
+  text-align: center;
 }
 
 .singleDesign {
@@ -456,6 +457,12 @@ button {
 
   .design {
     display: none;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+  }
+
+  .loading {
     width: 100%;
     height: 100%;
     margin: auto;
